// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Add build.commandOrigin config if it came from contexts 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/command_origin_context",
  "config": {
    "build": {
      "command": "test",
      "commandOrigin": "config",
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/command_origin_context",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/command_origin_context/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/command_origin_context/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/command_origin_context/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/command_origin_context",
  "siteInfo": {}
}"
`;

exports[`Add build.commandOrigin config if it came from netlify.toml 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/command_origin_config",
  "config": {
    "build": {
      "command": "test",
      "commandOrigin": "config",
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/command_origin_config",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/command_origin_config/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/command_origin_config/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/command_origin_config/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/command_origin_config",
  "siteInfo": {}
}"
`;

exports[`Add build.commandOrigin ui if it came from defaultConfig 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/empty",
  "config": {
    "build": {
      "command": "test",
      "commandOrigin": "ui",
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/empty",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/empty/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/empty/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/empty",
  "siteInfo": {}
}"
`;

exports[`Assign default edge-functions if build.edge_functions is not defined 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/default_edge_functions_not_defined",
  "config": {
    "build": {
      "edge_functions": "packages/config/tests/normalize/fixtures/default_edge_functions_not_defined/netlify/edge-functions",
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/default_edge_functions_not_defined",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/default_edge_functions_not_defined/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/default_edge_functions_not_defined/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/default_edge_functions_not_defined",
  "siteInfo": {}
}"
`;

exports[`Assign default functions if functions.directory is not defined and default directory exists 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/default_functions_not_defined",
  "config": {
    "build": {
      "environment": {},
      "functions": "packages/config/tests/normalize/fixtures/default_functions_not_defined/netlify/functions",
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/default_functions_not_defined",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "functionsDirectory": "packages/config/tests/normalize/fixtures/default_functions_not_defined/netlify/functions",
    "functionsDirectoryOrigin": "default",
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/default_functions_not_defined/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/default_functions_not_defined/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/default_functions_not_defined",
  "siteInfo": {}
}"
`;

exports[`Assign default functions if functions.directory is not defined and the legacy default directory exists 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/legacy_default_functions_not_defined",
  "config": {
    "build": {
      "environment": {},
      "functions": "packages/config/tests/normalize/fixtures/legacy_default_functions_not_defined/netlify-automatic-functions",
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/legacy_default_functions_not_defined",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "functionsDirectory": "packages/config/tests/normalize/fixtures/legacy_default_functions_not_defined/netlify-automatic-functions",
    "functionsDirectoryOrigin": "default-v1.0.0",
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/legacy_default_functions_not_defined/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/legacy_default_functions_not_defined/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/legacy_default_functions_not_defined",
  "siteInfo": {}
}"
`;

exports[`Collects paths from \`included_files\` defined at different levels 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/function_config_included_files",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/function_config_included_files",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {
        "included_files": [
          "from-top"
        ]
      },
      "my_function": {
        "included_files": [
          "!from-glob/two",
          "from-function"
        ]
      },
      "my_prefix_*": {
        "included_files": [
          "!from-top/one",
          "from-glob"
        ]
      }
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/function_config_included_files/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/function_config_included_files/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/function_config_included_files/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/function_config_included_files",
  "siteInfo": {}
}"
`;

exports[`Context-specific plugins config is last in merged array 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context_last",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context_last",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [
      {
        "inputs": {},
        "origin": "config",
        "package": "netlify-plugin-test-two"
      },
      {
        "inputs": {},
        "origin": "config",
        "package": "netlify-plugin-test"
      }
    ],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context_last/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context_last/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context_last/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context_last",
  "siteInfo": {}
}"
`;

exports[`Does not add build.commandOrigin config if command is empty 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/command_empty",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/command_empty",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/command_empty/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/command_empty/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/command_empty/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/command_empty",
  "siteInfo": {}
}"
`;

exports[`Does not add build.commandOrigin config if there are none 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/empty",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/empty",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/empty/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/empty/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/empty",
  "siteInfo": {}
}"
`;

exports[`Does not assign default edge-functions if build.edge_functions is defined 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/default_edge_functions_defined",
  "config": {
    "build": {
      "edge_functions": "packages/config/tests/normalize/fixtures/default_edge_functions_defined/test",
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/default_edge_functions_defined",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/default_edge_functions_defined/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/default_edge_functions_defined/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/default_edge_functions_defined/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/default_edge_functions_defined",
  "siteInfo": {}
}"
`;

exports[`Does not assign default functions if build.functions is defined 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/default_functions_defined_legacy",
  "config": {
    "build": {
      "environment": {},
      "functions": "packages/config/tests/normalize/fixtures/default_functions_defined_legacy/test",
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/default_functions_defined_legacy",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "functionsDirectory": "packages/config/tests/normalize/fixtures/default_functions_defined_legacy/test",
    "functionsDirectoryOrigin": "config-v1.0.0",
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/default_functions_defined_legacy/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/default_functions_defined_legacy/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/default_functions_defined_legacy/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/default_functions_defined_legacy",
  "siteInfo": {}
}"
`;

exports[`Does not assign default functions if default functions directory does not exist 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/default_functions_not_defined_directory_not_found",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/default_functions_not_defined_directory_not_found",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/default_functions_not_defined_directory_not_found/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/default_functions_not_defined_directory_not_found/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/default_functions_not_defined_directory_not_found",
  "siteInfo": {}
}"
`;

exports[`Does not assign default functions if functions.directory is defined 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/default_functions_defined",
  "config": {
    "build": {
      "environment": {},
      "functions": "packages/config/tests/normalize/fixtures/default_functions_defined/test",
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/default_functions_defined",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "functionsDirectory": "packages/config/tests/normalize/fixtures/default_functions_defined/test",
    "functionsDirectoryOrigin": "config",
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/default_functions_defined/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/default_functions_defined/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/default_functions_defined/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/default_functions_defined",
  "siteInfo": {}
}"
`;

exports[`Gives priority to functions.star over functions when defined first 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/default_functions_star_priority_first",
  "config": {
    "build": {
      "environment": {},
      "functions": "packages/config/tests/normalize/fixtures/default_functions_star_priority_first/one",
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/default_functions_star_priority_first",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {
        "external_node_modules": [
          "testOne"
        ],
        "ignored_node_modules": [
          "testTwo"
        ]
      }
    },
    "functionsDirectory": "packages/config/tests/normalize/fixtures/default_functions_star_priority_first/one",
    "functionsDirectoryOrigin": "config",
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/default_functions_star_priority_first/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/default_functions_star_priority_first/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/default_functions_star_priority_first/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/default_functions_star_priority_first",
  "siteInfo": {}
}"
`;

exports[`Gives priority to functions.star over functions when defined last 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/default_functions_star_priority_last",
  "config": {
    "build": {
      "environment": {},
      "functions": "packages/config/tests/normalize/fixtures/default_functions_star_priority_last/one",
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/default_functions_star_priority_last",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {
        "external_node_modules": [
          "testOne"
        ],
        "ignored_node_modules": [
          "testTwo"
        ]
      }
    },
    "functionsDirectory": "packages/config/tests/normalize/fixtures/default_functions_star_priority_last/one",
    "functionsDirectoryOrigin": "config",
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/default_functions_star_priority_last/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/default_functions_star_priority_last/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/default_functions_star_priority_last/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/default_functions_star_priority_last",
  "siteInfo": {}
}"
`;

exports[`Handles function configuration objects for functions with the same name as one of the configuration properties 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/function_config_ambiguous",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/function_config_ambiguous",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {},
      "external_node_modules": {
        "external_node_modules": [
          "module-three"
        ]
      }
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/function_config_ambiguous/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/function_config_ambiguous/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/function_config_ambiguous/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/function_config_ambiguous",
  "siteInfo": {}
}"
`;

exports[`Merges context-specific plugins 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [
      {
        "inputs": {
          "array": [
            "c",
            "d"
          ],
          "boolean": false,
          "object": {
            "prop": false,
            "unset": true
          },
          "unset": true
        },
        "origin": "config",
        "package": "netlify-plugin-test"
      },
      {
        "inputs": {
          "boolean": true
        },
        "origin": "config",
        "package": "netlify-plugin-test-two"
      }
    ],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/merge_netlify_toml_context",
  "siteInfo": {}
}"
`;

exports[`Merges plugins in netlify.toml and defaultConfig 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/merge_netlify_toml_default",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/merge_netlify_toml_default",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [
      {
        "inputs": {
          "array": [
            "c",
            "d"
          ],
          "boolean": false,
          "object": {
            "prop": false,
            "unset": true
          },
          "unset": true
        },
        "origin": "config",
        "package": "netlify-plugin-test"
      },
      {
        "inputs": {
          "boolean": true
        },
        "origin": "config",
        "package": "netlify-plugin-test-two"
      }
    ],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/merge_netlify_toml_default/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/merge_netlify_toml_default/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/merge_netlify_toml_default/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/merge_netlify_toml_default",
  "siteInfo": {}
}"
`;

exports[`Normalizes function configurations defined at different levels 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/function_config_all_levels",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/function_config_all_levels",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {
        "external_node_modules": [
          "module-one",
          "module-two"
        ],
        "node_bundler": "esbuild"
      },
      "my_function": {
        "external_node_modules": [
          "module-three"
        ],
        "node_bundler": "zisi"
      },
      "my_prefix_*": {
        "external_node_modules": [
          "module-four"
        ]
      },
      "other_prefix_*": {
        "node_bundler": "nft"
      }
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/function_config_all_levels/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/function_config_all_levels/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/function_config_all_levels/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/function_config_all_levels",
  "siteInfo": {}
}"
`;

exports[`Normalizes function configurations defined at the top level 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/function_config_top_level",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/function_config_top_level",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {
        "external_node_modules": [
          "module-one",
          "module-two"
        ],
        "node_bundler": "esbuild"
      }
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/function_config_top_level/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/function_config_top_level/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/function_config_top_level/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/function_config_top_level",
  "siteInfo": {}
}"
`;

exports[`Some properties can be capitalized 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/props_case/base",
  "config": {
    "build": {
      "base": "packages/config/tests/normalize/fixtures/props_case/base",
      "command": "gulp build",
      "commandOrigin": "config",
      "edge_functions": "packages/config/tests/normalize/fixtures/props_case/base/edge-functions",
      "environment": {
        "TEST": "test"
      },
      "functions": "packages/config/tests/normalize/fixtures/props_case/base/functions",
      "ignore": "doIgnore",
      "processing": {
        "css": {
          "bundle": true
        },
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/props_case/base/publish",
      "publishOrigin": "config",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "functionsDirectory": "packages/config/tests/normalize/fixtures/props_case/base/functions",
    "functionsDirectoryOrigin": "config-v1.0.0",
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/props_case/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    },
    "TEST": {
      "sources": [
        "configFile"
      ],
      "value": "test"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/props_case/base/publish/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/props_case/base/publish/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/props_case",
  "siteInfo": {}
}"
`;

exports[`Some properties can be capitalized even when merged with defaultConfig 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/props_case_default_config/base",
  "config": {
    "build": {
      "base": "packages/config/tests/normalize/fixtures/props_case_default_config/base",
      "command": "gulp build default",
      "commandOrigin": "ui",
      "edge_functions": "packages/config/tests/normalize/fixtures/props_case_default_config/base/edgeFunctions",
      "environment": {
        "TEST": "test"
      },
      "functions": "packages/config/tests/normalize/fixtures/props_case_default_config/base/functions",
      "ignore": "doIgnore",
      "processing": {
        "css": {
          "bundle": false
        },
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/props_case_default_config/base/publish",
      "publishOrigin": "ui",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "functionsDirectory": "packages/config/tests/normalize/fixtures/props_case_default_config/base/functions",
    "functionsDirectoryOrigin": "config-v1.0.0",
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    },
    "TEST": {
      "sources": [
        "configFile"
      ],
      "value": "test"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/props_case_default_config/base/publish/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/props_case_default_config/base/publish/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/props_case_default_config",
  "siteInfo": {}
}"
`;

exports[`build.command empty 1`] = `
"{
  "accounts": [],
  "branch": "branch",
  "buildDir": "packages/config/tests/normalize/fixtures/command_empty",
  "config": {
    "build": {
      "environment": {},
      "processing": {
        "css": {},
        "html": {},
        "images": {},
        "js": {}
      },
      "publish": "packages/config/tests/normalize/fixtures/command_empty",
      "publishOrigin": "default",
      "services": {}
    },
    "functions": {
      "*": {}
    },
    "headers": [],
    "plugins": [],
    "redirects": []
  },
  "configPath": "packages/config/tests/normalize/fixtures/command_empty/netlify.toml",
  "context": "production",
  "env": {
    "BRANCH": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "BUILD_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "CACHED_COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "COMMIT_REF": {
      "sources": [
        "general"
      ],
      "value": "HEXADECIMAL_ID"
    },
    "CONTEXT": {
      "sources": [
        "general"
      ],
      "value": "production"
    },
    "DEPLOY_ID": {
      "sources": [
        "general"
      ],
      "value": "0"
    },
    "DEPLOY_PRIME_URL": {
      "sources": [
        "general"
      ],
      "value": "https://branch--site-name.netlify.app"
    },
    "DEPLOY_URL": {
      "sources": [
        "general"
      ],
      "value": "https://0--site-name.netlify.app"
    },
    "GATSBY_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "HEAD": {
      "sources": [
        "general"
      ],
      "value": "branch"
    },
    "LANG": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "LANGUAGE": {
      "sources": [
        "general"
      ],
      "value": "en_US:en"
    },
    "LC_ALL": {
      "sources": [
        "general"
      ],
      "value": "en_US.UTF-8"
    },
    "NETLIFY_LOCAL": {
      "sources": [
        "general"
      ],
      "value": "true"
    },
    "NEXT_TELEMETRY_DISABLED": {
      "sources": [
        "general"
      ],
      "value": "1"
    },
    "PULL_REQUEST": {
      "sources": [
        "general"
      ],
      "value": "false"
    }
  },
  "headersPath": "packages/config/tests/normalize/fixtures/command_empty/_headers",
  "integrations": [],
  "redirectsPath": "packages/config/tests/normalize/fixtures/command_empty/_redirects",
  "repositoryRoot": "packages/config/tests/normalize/fixtures/command_empty",
  "siteInfo": {}
}"
`;
